# thoughtful_ai

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini
thoughtful_sort/: cli.py  sort.py
thoughtful_sort/test/: test_cli.py  test_sort.py
